--- a/src/app/view/layouts/header/header.component.html
+++ b/src/app/view/layouts/header/header.component.html
@@ -101,7 +101,7 @@
                                 (data)="countryArr"                                                      
                             [items]="countryArr"                           
                             (selected)="changeCountry($event)"
-                            placeholder="No country selected">
+                            placeholder="No city selected">
                             </ng-select>
                                 </a>
                         </div>
