Modifications for the site

--- a/src/app/view/event-detail/event-detail.component.html
+++ b/src/app/view/event-detail/event-detail.component.html
@@ -108,10 +108,10 @@
                                     <label>Contact Info: </label>
                                     <span id="phone" class="listing_custom frontend_phone">{{data.event_data.contact_info}}</span>
                                 </p></span>
-                                <p class="fees">
+                                <!--<p class="fees">
                                     <label>Ticket Info: </label>
                                     <span class="event_custom frontend_reg_fees">$100</span>
-                                </p>
+                                </p>-->
                             </div>
                         </div>
                     </header>
