--- a/src/app/view/layouts/header/header.component.html
+++ b/src/app/view/layouts/header/header.component.html
@@ -39,10 +39,10 @@
                                                   <img src="{{user_avatar}}" style="height: 30px;width: 30px;border-radius: 15px;"><p style="float: right;margin-left: 5px;padding:2px;">{{user_name}}</p></a>
                                         <ul class="sub-menu">
                                             <li class=""><a href="" [routerLink]="['/profile']">Profile</a></li>
-                                            <li class=""><a href="" [routerLink]="['/my-organizations']">My Organizations</a></li>
-                                            <!-- <li class=""><a href="" [routerLink]="['/my-venues']">My Venue's</a></li> -->
+                                            <!-- <li class=""><a href="" [routerLink]="['/my-organizations']">My Organizations</a></li>
+                                            <li class=""><a href="" [routerLink]="['/my-venues']">My Venue's</a></li> -->
                                             <li class=""><a href="" [routerLink]="['/my-events']">My Events</a></li>
-                                            <li class=""><a href="" [routerLink]="['/groups']">My Groups</a></li>
+                                             <!-- <li class=""><a href="" [routerLink]="['/groups']">My Groups</a></li> -->
                                             <li class=""><a href="" [routerLink]="['/notification-setting']">Notification Settings</a></li> 
                                             <li class=""><a href="" [routerLink]="['/changepassword']">Change Password</a></li>
                                             <li class="" (click) = "userLogout()"><a>Logout</a></li>
@@ -101,7 +101,7 @@
                                 (data)="countryArr"                                                      
                             [items]="countryArr"                           
                             (selected)="changeCountry($event)"
-                            placeholder="No city selected">
+                            placeholder="Global Events">
                             </ng-select>
                                 </a>
                         </div>
