--- a/src/app/view/layouts/footer/footer.component.html
+++ b/src/app/view/layouts/footer/footer.component.html
@@ -28,7 +28,7 @@
         <div class="footer-wrap clearfix row">
             <div class="columns">
                 <div class="footer_widget_wrap">
-                    <div id="supreme_subscriber_widget-1" class="widget subscribe">
+                     <!--<div id="supreme_subscriber_widget-1" class="widget subscribe">
                         <div class="widget-wrap widget-inside">                 
                             <p> Subscribe to get latest news from site </p>
                             <span class="newsletter_msg" id="newsletter_msg"> </span>
@@ -45,9 +45,9 @@
                                     <button class="replace" type="submit"> Subscribe </button>
                                 </form>
                             </div>
-                            <!--End mc_embed_signup-->
+                            <!-End mc_embed_signup->
                         </div>
-                    </div>
+                    </div>-->
                     <div id="hybrid-categories-2" class="widget categories">
                         <div class="widget-wrap widget-inside">
                             <h3 class="widget-title">Blog Categories</h3>
