clear local storage when window is closed

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <app-header></app-header>
+<body onunload = "javascript:window.localStorage.clear()">
 <router-outlet (activate)="onActivate($event, outlet)" #outlet></router-outlet>
 <app-footer ></app-footer>
