--- a/src/app/view/layouts/header/header.component.html
+++ b/src/app/view/layouts/header/header.component.html
@@ -42,6 +42,7 @@
                                             <!-- <li class=""><a href="" [routerLink]="['/my-organizations']">My Organizations</a></li>
                                             <li class=""><a href="" [routerLink]="['/my-venues']">My Venue's</a></li> -->
                                             <li class=""><a href="" [routerLink]="['/my-events']">My Events</a></li>
+                                            <li class=""><a href="" [routerLink]="['/my-attendance']">My Attendance</a></li>
                                              <!-- <li class=""><a href="" [routerLink]="['/groups']">My Groups</a></li> -->
                                             <li class=""><a href="" [routerLink]="['/notification-setting']">Notification Settings</a></li> 
                                             <li class=""><a href="" [routerLink]="['/changepassword']">Change Password</a></li>
