--- a/src/app/view/event-detail/event-detail.component.html
+++ b/src/app/view/event-detail/event-detail.component.html
@@ -610,7 +610,7 @@
                         <!--start post type title -->
                         <div class="event-wrapper">
                             <div class="event-title">
-                                <h2 class="entry-title"><a itemprop="url" href="" [routerLink]="['/event_detail',related_events.event_id]" title="{{related_events.event_title}}">{{related_events.event_title}}</a></h2>
+                                <h2 class="entry-title"><a itemprop="url" href="" [routerLink]="['/event-detail',related_events.event_id]" title="{{related_events.event_title}}">{{related_events.event_title}}</a></h2>
                                <div class="listing_rating">
                                                             <div class="directory_rating_row">
                                                                 <span class="single_rating"> 
