--- a/src/app/view/event/eventlist.component.html
+++ b/src/app/view/event/eventlist.component.html
@@ -38,7 +38,7 @@
             <h4 style="text-align: center;">{{showData}}</h4>
                 <article id="event_27121" class="post" *ngFor = "let events of eventArr | paginate: { id: 'server',  itemsPerPage: per_page, currentPage: currentPage, totalItems: total}">
                     <div class="listing_img">
-                        <a href="" [routerLink]="['/event_detail',events.event_id]"> 
+                        <a href="" [routerLink]="['/event-detail',events.event_id]"> 
                             <img src="{{events.featured_image}}" alt="image" title="{{events.event_title}}">
                         </a>
 
@@ -53,7 +53,7 @@
                                         {{events.start_date}}			<span></span>
                                     </span>
                                     <h2 class="entry-title">
-                                        <a itemprop="url" href="" [routerLink]="['/event_detail',events.event_id]" title="{{events.event_title}}" rel="bookmark">{{events.event_title}}</a>
+                                        <a itemprop="url" href="" [routerLink]="['/event-detail',events.event_id]" title="{{events.event_title}}" rel="bookmark">{{events.event_title}}</a>
                                     </h2>
                                     <div class="listing_rating">
                                         <div class="directory_rating_row">
@@ -142,7 +142,7 @@
                                     <!-- inside loop div start -->
                                          <article class="post" *ngFor = "let events of eventArr | paginate: { id: 'server',  itemsPerPage: per_page, currentPage: currentPage, totalItems: total}">
                                         <div class="listing_img">
-                                            <a [routerLink]="['/event_detail',events.event_id]"> 
+                                            <a [routerLink]="['/event-detail',events.event_id]"> 
                                             <img src="{{events.featured_image}}" alt="image" title="{{events.event_title}}">
                                            </a>
                                         </div>
@@ -159,7 +159,7 @@
                                                         </span>
                                                         <h2 class="entry-title">
                                                             
-                                                             <a itemprop="url" [routerLink]="['/event_detail',events.event_id]" title="{{events.event_title}}" rel="bookmark">{{events.event_title}}</a></h2>
+                                                             <a itemprop="url" [routerLink]="['/event-detail',events.event_id]" title="{{events.event_title}}" rel="bookmark">{{events.event_title}}</a></h2>
 
                                                        <div class="listing_rating">
                                         <div class="directory_rating_row">
@@ -203,7 +203,7 @@
                                                 <!--Start Post Content -->
                                                 <div class="entry-summary" itemprop="description">
                                                 <p [innerHTML]="events.event_description"></p>
-                                                <a *ngIf="events.readmore==1" [routerLink]="['/event_detail',events.event_id]" >Read More</a>
+                                                <a *ngIf="events.readmore==1" [routerLink]="['/event-detail',events.event_id]" >Read More</a>
                                                
                                                 </div>                                                                        <!-- End Post Content -->
                                                 <div class="rev_pin">
