--- a/src/app/view/profile/profile.component.html
+++ b/src/app/view/profile/profile.component.html
@@ -16,7 +16,7 @@
         <section id="content" class="large-9 small-12 columns">
             <div class="form-group">
                 <div class="col-sm-12 col-xs-12">
-                    <a href="" [routerLink]="['/edit_profile']" class="btn btn-warning pull-right">Edit Profile </a>
+                    <a href="" [routerLink]="['/edit-profile']" class="btn btn-warning pull-right">Edit Profile </a>
                 </div>
             </div>
             <div class="author_cont">
