--- a/src/app/view/blog/blog.component.html
+++ b/src/app/view/blog/blog.component.html
@@ -40,7 +40,7 @@
                     </div>
                     <div class="entry-header">
                         <h2 class="entry-title">
-                            <a itemprop="url"  [routerLink]="['/blog_detail',blog.blog_id]"  title="" rel="bookmark">{{blog.blog_title}}</a>
+                            <a itemprop="url"  [routerLink]="['/blog-detail',blog.blog_id]"  title="" rel="bookmark">{{blog.blog_title}}</a>
                         </h2>
                         <div class="byline"> 
                             <!--<span class="author vcard">Author
