--- a/src/app/view/layouts/footer/footer.component.html
+++ b/src/app/view/layouts/footer/footer.component.html
@@ -70,7 +70,7 @@
                             <li><a href="" [routerLink]="['/']">Home</a></li>
                             <li><a href="" [routerLink]="['/event']" >Events</a></li>
                             <li><a href="" [routerLink]="['/blog']">Blog</a></li>
-                            <li><a href="" [routerLink]="['/sponsors']">Sponsors</a></li>
+                            <!-- <li><a href="" [routerLink]="['/sponsors']">Sponsors</a></li> -->
                             <li><a href="" [routerLink]="['/contactus']">Contact Us</a></li>
                         </ul>
                     </div>
