--- a/src/app/view/search/search.component.html
+++ b/src/app/view/search/search.component.html
@@ -10,13 +10,13 @@
                    
                     <ul class="listingview clearfix list" id="list_168817222">
                         <li class="clearfix"   *ngFor = "let events of event">
-                            <a href="" [routerLink] = "['/event_detail',events.event_id]" title="{{events.event_title}}" class="link_img" data-rel="">
+                            <a href="" [routerLink] = "['/event-detail',events.event_id]" title="{{events.event_title}}" class="link_img" data-rel="">
                               <img src="app/assets/images/event.png" class="icon_img"></a>
                              <div class="post_data">
                                 <div class="row">
                                 <div class="col-md-8">
                                 <h3 style="margin-bottom:5px !important;">
-                                    <a href="" [routerLink] = "['/event_detail',events.event_id]" title="{{events.event_title}}">{{events.event_title}}</a>
+                                    <a href="" [routerLink] = "['/event-detail',events.event_id]" title="{{events.event_title}}">{{events.event_title}}</a>
                                </h3>
                                 </div>
                                 <div class="col-md-4">
