fixed search issu

--- a/src/app/view/blog/blog.component.html
+++ b/src/app/view/blog/blog.component.html
@@ -65,7 +65,7 @@
                 <h4 style="text-align: center;">No Result Found</h4>
                 </div>
          
-            </div>
+            </div><br>
             
            
 
