--- a/src/app/not-found/not-found.component.html
+++ b/src/app/not-found/not-found.component.html
@@ -1,3 +1,3 @@
 <h4 style="text-align: center;width: 100%;height:200px;margin-top:200px;">
-  "Sorry! The page you requested does not exist. Maybe you were looking for something else."
+  Sorry! The page you requested does not exist. Maybe you were looking for something else.
 </h4>
