fixed search issue

--- a/src/app/assets/css/event/event.component.css
+++ b/src/app/assets/css/event/event.component.css
@@ -18,3 +18,9 @@
     text-align: left;
     width: 15px;
 }
+    input[type=number]::-webkit-inner-spin-button, 
+    input[type=number]::-webkit-outer-spin-button { 
+        -webkit-appearance: none!important; 
+      margin: 0; 
+
+}
