--- a/src/app/assets/css/custom_style.css
+++ b/src/app/assets/css/custom_style.css
@@ -174,6 +174,12 @@ small {
 .b-t {
     border-top: 1px solid rgba(120,130,140,.50);
 }
+
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+    -webkit-appearance: none!important; 
+    margin: 0!important; 
+}
 .row.no-gutter {
     margin-left: 0;
     margin-right: 0;
