--- a/src/app/assets/css/theme-style.css
+++ b/src/app/assets/css/theme-style.css
@@ -32,6 +32,19 @@ body {
 h1, h2, h3, h4, h5, h6{
     font-weight: 700;
 }
+input[type='number'] {
+    -moz-appearance:textfield;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+}
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+    -webkit-appearance: none!important; 
+    margin: 0!important; 
+}
 a:hover,
 ol li a,
 ul li a {
