--- a/src/app/view/event/event.component.html
+++ b/src/app/view/event/event.component.html
@@ -235,7 +235,7 @@
                         <h3 class="widget-title">Search Nearby Miles Range</h3>
                         <form #zipcodeForm="ngForm" (ngSubmit)="searchZipCodeEvent(zipcodeForm)">
                             <div class="search_range">
-                                <input type="text" name="code" id="range_address" value="" class="range_address location placeholder ui-autocomplete-input" placeholder="Enter your Postal Code" autocomplete="off" ngModel>
+                                <input type="number" name="code" id="range_address" value="" class="range_address location placeholder ui-autocomplete-input" placeholder="Enter your Postal Code" autocomplete="off" ngModel>
                                 <label>Mile range: </label><label>{{currntRange}}</label>
                                 <input style="width: 85%;float: left;" id="slider1" type="range" min="0" max="500" step="100" name="mile" (ngModelChange)="outputUpdate($event)" [(ngModel)]="currntRange"/>
                                  <button type="submit" class="btn btn-default btn-sm btn-square active pull-right add_button"><span class="glyphicon glyphicon-search" area-hidden="true"></span> </button>
