--- a/src/app/view/blog-detail/blog-detail.component.html
+++ b/src/app/view/blog-detail/blog-detail.component.html
@@ -44,13 +44,13 @@
                 </div>
                 <!-- .hentry -->
                 <div class="loop-nav">
-                    <a *ngIf="previous!=null" rel="next" [routerLink]="['/blog_detail',previous]">
+                    <a *ngIf="previous!=null" rel="next" [routerLink]="['/blog-detail',previous]">
                         <span class="previous">
                             <span class="meta-nav">&larr;</span>
                             Previous
                         </span>
                     </a>
-                     <a *ngIf="next!=null" [routerLink]="['/blog_detail',next]" >
+                     <a *ngIf="next!=null" [routerLink]="['/blog-detail',next]" >
                         <span class="next" >
                           Next
                               <span class="meta-nav">&rarr;</span>
