--- a/src/app/view/blog/blog.component.html
+++ b/src/app/view/blog/blog.component.html
@@ -54,7 +54,7 @@
                           
                         </div>			
                         <p class="entry-summary" [innerHTML]="blog.blog_content"></p>
-                        <a *ngIf="blog.read_more==1" [routerLink]="['/blog_detail',blog.blog_id]" >Read More</a> 				  
+                        <a *ngIf="blog.read_more==1" [routerLink]="['/blog-detail',blog.blog_id]" >Read More</a> 				  
                         
                         <!-- .entry-summary -->
 
