fixed blog detail

--- a/src/app/view/blog-detail/blog-detail.component.html
+++ b/src/app/view/blog-detail/blog-detail.component.html
@@ -29,9 +29,9 @@
 
                     <section class="entry-content">
                         <div class="entry-thumbnail">
-                            <img src="{{blogDetail.thumb}}" alt="">
+                            <img src="{{blogDetail.thumb}}" alt="" style="width: 100%;">
                         </div>
-                        <p [innerHTML]="blogDetail.blog_content">
+                        <p [innerHTML]="blogDetail.blog_content"></p>
                        
                     </section>
                     <!-- .entry-content -->
