--- a/src/app/assets/css/event-detail/event-detail.component.css
+++ b/src/app/assets/css/event-detail/event-detail.component.css
@@ -26,3 +26,11 @@
 .slides img{
    height: 500px !important; 
 }
+.ng2-pagination a {
+    float: none !important;
+    position: static !important;
+    width: auto !important;
+}
+.ng2-pagination span{
+    width: auto !important;
+}
