--- a/src/app/assets/css/theme-style.css
+++ b/src/app/assets/css/theme-style.css
@@ -15,6 +15,17 @@ body {
     word-wrap: break-word;
 }
 
+.ng2-pagination a {
+    float: none !important;
+    position: static !important;
+    width: auto !important;
+    margin: 0 !important;
+    display: inline !important;
+}
+.ng2-pagination span{
+    width: auto !important;
+}
+
 .entry-content li {
     margin-bottom: 20px;
 }
