--- a/src/app/assets/css/event-detail/event-detail.component.css
+++ b/src/app/assets/css/event-detail/event-detail.component.css
@@ -12,6 +12,17 @@
    
 }
 
+.has-text-centered .ng2-pagination a {
+    float: none !important;
+    position: static !important;
+    width: auto !important;
+    margin: 0 !important;
+    display: inline !important;
+}
+.has-text-centered .ng2-pagination span{
+    width: auto !important;
+}
+
 
 .new_icon {
     color: #999;
