--- a/src/app/view/event-detail/event-detail.component.html
+++ b/src/app/view/event-detail/event-detail.component.html
@@ -694,12 +694,13 @@
                             </div>
                         </div> -->
 
-                        <div class="has-text-centered">
+                        <div class="has-text-centered" id="server-popular">
                             <pagination-controls  (pageChange)="getEventPagination($event)" id="server"></pagination-controls>
                         </div>
 
 
                     </div>
+
 
                     <!-- 300x150 ad_space -->
                    <!--  <div id="templatic_text-1" class="widget templatic_text">
